--- a/src/templates/admin/sidebar.html
+++ b/src/templates/admin/sidebar.html
@@ -36,7 +36,7 @@
             <li ng-if="vm.IsSuper" class="sidebar-list">
                 <a ng-disabled="loading" ui-sref="private.blast">Blast <span class="menu-icon fa fa-bullhorn"></span></a>
             </li>
-            <li ng-if="isLoggedIn" class="sidebar-title"><span>Version <kbd>0.2.1</kbd></span></li>
+            <li ng-if="isLoggedIn" class="sidebar-title"><span>Version <kbd>{{ vm.Version }}</kbd></span></li>
         </div>
     </ul>
     <div class="sidebar-footer">
